Deployment Process / ece-tools build:generate

--- a/5. Deployment Process.md
+++ b/5. Deployment Process.md
@@ -32,7 +32,6 @@ Build and deploy full steps:
        #php ./vendor/bin/ece-tools build
     ```
     - result of the build phase is a read-only file system referred to as a slug
-    - TODO: ./vendor/bin/ece-tools build:generate / build:transfer
 3. Prepare the slug
     - create an archive and put the slug in permanent storage
     - slug includes all files and folders excluding the mounts configured in `magento.app.yaml`
@@ -59,7 +58,6 @@ Build and deploy full steps:
         php ./vendor/bin/ece-tools deploy
     ```
     - deploy script uses the values defined by configuration files in the `.magento` directory, then the script deletes the directory and its contents
-    - TODO: php ./vendor/bin/ece-tools deploy
 6. Post-deployment: configure routing
     - creates backup (BAK) files for the app/etc/env.php and the app/etc/config.php configuration files
     - execute commands after deploying your application and after the container begins accepting connections
@@ -69,11 +67,79 @@ Build and deploy full steps:
     post_deploy: |
         php ./vendor/bin/ece-tools post-deploy
     ```
-    - TODO: php ./vendor/bin/ece-tools post-deploy
 
 ###### What role every process/phase plays and how to impact every process
-
 ###### How Magento Cloud deploys Magento. What every script does on every deployment phase
+
+Ece-tools [\Magento\MagentoCloud\App\Container](https://github.com/magento/ece-tools/blob/develop/src/App/Container.php#L50) initialize [\Illuminate\Container\Container](https://laravel.com/api/5.5/Illuminate/Container/Container.html) and configure all commands processes.
+
+**Build**
+
+- `php ./vendor/bin/ece-tools build:generate`
+
+- [Process\Build\PreBuild](https://github.com/magento/ece-tools/tree/develop/src/Process/Build/PreBuild.php)
+    - check VERBOSE_COMMANDS in `.magento.env.yaml`
+    - check and clean `generated/code` folder
+    - check and clean `generated/metadata` folder
+    - delete flag `.static_content_deploy` file
+- [Process\ValidateConfiguration](https://github.com/magento/ece-tools/tree/develop/src/Process/ValidateConfiguration.php)
+    ```php
+        $this->container->make(\Magento\MagentoCloud\Process\ValidateConfiguration::class, [
+            'validators' => [
+                ValidatorInterface::LEVEL_CRITICAL => [
+                    $this->container->make(ConfigValidator\Build\ComposerFile::class),
+                    $this->container->make(ConfigValidator\Build\StageConfig::class),
+                    $this->container->make(ConfigValidator\Build\BuildOptionsIni::class),
+                ],
+                ValidatorInterface::LEVEL_WARNING => [
+                    $this->container->make(ConfigValidator\Build\ConfigFileExists::class),
+                    $this->container->make(ConfigValidator\Build\DeprecatedBuildOptionsIni::class),
+                    $this->container->make(ConfigValidator\Build\StageConfigDeprecatedVariables::class),
+                    $this->container->make(ConfigValidator\Build\ModulesExists::class),
+                    $this->container->make(ConfigValidator\Build\AppropriateVersion::class),
+                    $this->container->make(ConfigValidator\Build\ScdOptionsIgnorance::class),
+                    $this->container->make(ConfigValidator\IdealState::class),
+                ],
+            ],
+        ]),
+    ```
+    see [Config/Validator/Build](https://github.com/magento/ece-tools/tree/develop/src/Config/Validator/Build) folder 
+- [Process\Build\RefreshModules](https://github.com/magento/ece-tools/tree/develop/src/Process/Build/RefreshModules.php)
+    - see [\Config\Module::refresh](https://github.com/magento/ece-tools/tree/develop/src/Config/Module.php)
+    - enable all modules `php ./bin/magento module:enable --all --ansi --no-interaction` if `modules` not found in the `app/etc/config.php`
+- [Process\Build\ApplyPatches](https://github.com/magento/ece-tools/tree/develop/src/Process/Build/ApplyPatches.php)
+    - applying patches (`Patch\Manager::applyAll`)
+        - copyStaticFile: copy `pub/static.php` => `pub/front-static.php`
+        - applyComposerPatches: from [patches.json](https://github.com/magento/ece-tools/blob/develop/patches.json) file
+        - applyHotFixes: `git apply` patches from `m2-hotfixes/*.patch`
+- [Process\Build\MarshallFiles](https://github.com/magento/ece-tools/tree/develop/src/Process/Build/MarshallFiles.php)
+    - delete `var/cache/` directory
+    - copying di.xml files for Magento version < 2.2
+- [Process\Build\CopySampleData](https://github.com/magento/ece-tools/tree/develop/src/Process/Build/CopySampleData.php)
+    - copy (if exists) `vendor/magento/sample-data-media` => `/pub/media`
+- [Process\Build\CompileDi](https://github.com/magento/ece-tools/tree/develop/src/Process/Build/CompileDi.php)
+    - execute `php ./bin/magento setup:di:compile {$verbosityLevel} --ansi --no-interaction`
+- [Process\Build\ComposerDumpAutoload](https://github.com/magento/ece-tools/tree/develop/src/Process/Build/ComposerDumpAutoload.php)
+    - execute `composer dump-autoload -o --ansi --no-interaction`
+- [Process\Build\DeployStaticContent](https://github.com/magento/ece-tools/tree/develop/src/Process/Build/DeployStaticContent.php)
+    - delete `scd_in_build` flag
+    - validate [Config\Validator\GlobalStage\ScdOnBuild::validate](https://github.com/magento/ece-tools/blob/develop/src/Config/Validator/GlobalStage/ScdOnBuild.php#L72)
+        - check SCD_ON_DEMAND
+        - check SKIP_SCD
+        - validate [Config\Validator\Build\ConfigFileStructure::validate](https://github.com/magento/ece-tools/blob/develop/src/Config/Validator/Build/ConfigFileStructure.php#L63)
+            - in the `app/etc/config.php` 
+                - scopes/websites (count($websites) > 0)
+                - scopes/stores (count($stores) > 0 )
+    - if all checks valid execure [Process\Build\DeployStaticContent\Generate](https://github.com/magento/ece-tools/tree/develop/src/Process/Build/DeployStaticContent/Generate.php)
+        - TODO:
+
+- `php ./vendor/bin/ece-tools build:transfer`
+
+**Deploy**
+- `php ./vendor/bin/ece-tools deploy`
+
+**Post_deploy**
+- `php ./vendor/bin/ece-tools post-deploy`
 
 ###### How to extend these scripts and best practices for doing so
 
