Deployment Process / build command update

--- a/5. Deployment Process.md
+++ b/5. Deployment Process.md
@@ -75,7 +75,18 @@ Ece-tools [\Magento\MagentoCloud\App\Container](https://github.com/magento/ece-t
 
 **Build**
 
-- `php ./vendor/bin/ece-tools build:generate`
+`php ./vendor/bin/ece-tools build` is a proxy for calling build:generate and build:transfer commands.
+
+```php
+    public function execute(InputInterface $input, OutputInterface $output)
+    {
+        $this->getApplication()->find(\Magento\MagentoCloud\Command\Build\Generate::NAME)->execute($input, $output);
+        $this->getApplication()->find(\Magento\MagentoCloud\Command\Build\Transfer::NAME)->execute($input, $output);
+    }
+```
+
+
+`php ./vendor/bin/ece-tools build:generate`
 
 - [Process\Build\PreBuild](https://github.com/magento/ece-tools/tree/develop/src/Process/Build/PreBuild.php)
     - check VERBOSE_COMMANDS in `.magento.env.yaml`
@@ -133,7 +144,12 @@ Ece-tools [\Magento\MagentoCloud\App\Container](https://github.com/magento/ece-t
     - if all checks valid execure [Process\Build\DeployStaticContent\Generate](https://github.com/magento/ece-tools/tree/develop/src/Process/Build/DeployStaticContent/Generate.php)
         - TODO:
 
-- `php ./vendor/bin/ece-tools build:transfer`
+
+`php ./vendor/bin/ece-tools build:transfer`
+
+- [Process\Build\ClearInitDirectory](https://github.com/magento/ece-tools/tree/develop/src/Process/Build/ClearInitDirectory.php)
+- [Process\Build\BackupData](https://github.com/magento/ece-tools/tree/develop/src/Process/Build/BackupData.php)
+
 
 **Deploy**
 - `php ./vendor/bin/ece-tools deploy`
