Deployment Process / SCD on build phase

--- a/5. Deployment Process.md
+++ b/5. Deployment Process.md
@@ -88,10 +88,12 @@ Ece-tools [\Magento\MagentoCloud\App\Container](https://github.com/magento/ece-t
 
 `php ./vendor/bin/ece-tools build:generate`
 
+> notice: Starting generate command. (magento/ece-tools version: 2002.0.17, magento/magento2-base version: 2.2.8)
+
 - [Process\Build\PreBuild](https://github.com/magento/ece-tools/tree/develop/src/Process/Build/PreBuild.php)
     - check VERBOSE_COMMANDS in `.magento.env.yaml`
-    - check and clean `generated/code` folder
-    - check and clean `generated/metadata` folder
+    - clean `generated/code` folder
+    - clean `generated/metadata` folder
     - delete flag `.static_content_deploy` file
 - [Process\ValidateConfiguration](https://github.com/magento/ece-tools/tree/develop/src/Process/ValidateConfiguration.php)
     ```php
@@ -114,10 +116,11 @@ Ece-tools [\Magento\MagentoCloud\App\Container](https://github.com/magento/ece-t
             ],
         ]),
     ```
-    see [Config/Validator/Build](https://github.com/magento/ece-tools/tree/develop/src/Config/Validator/Build) folder 
+    validators list: [Config/Validator/Build/](https://github.com/magento/ece-tools/tree/develop/src/Config/Validator/Build) 
 - [Process\Build\RefreshModules](https://github.com/magento/ece-tools/tree/develop/src/Process/Build/RefreshModules.php)
     - see [\Config\Module::refresh](https://github.com/magento/ece-tools/tree/develop/src/Config/Module.php)
     - enable all modules `php ./bin/magento module:enable --all --ansi --no-interaction` if `modules` not found in the `app/etc/config.php`
+    - do not enable already disabled modules (if `modules` found in the `app/etc/config.php`)
 - [Process\Build\ApplyPatches](https://github.com/magento/ece-tools/tree/develop/src/Process/Build/ApplyPatches.php)
     - applying patches (`Patch\Manager::applyAll`)
         - copyStaticFile: copy `pub/static.php` => `pub/front-static.php`
@@ -133,19 +136,44 @@ Ece-tools [\Magento\MagentoCloud\App\Container](https://github.com/magento/ece-t
 - [Process\Build\ComposerDumpAutoload](https://github.com/magento/ece-tools/tree/develop/src/Process/Build/ComposerDumpAutoload.php)
     - execute `composer dump-autoload -o --ansi --no-interaction`
 - [Process\Build\DeployStaticContent](https://github.com/magento/ece-tools/tree/develop/src/Process/Build/DeployStaticContent.php)
-    - delete `scd_in_build` flag
+    - delete `.static_content_deploy` flag file
     - validate [Config\Validator\GlobalStage\ScdOnBuild::validate](https://github.com/magento/ece-tools/blob/develop/src/Config/Validator/GlobalStage/ScdOnBuild.php#L72)
-        - check SCD_ON_DEMAND
-        - check SKIP_SCD
+        - check SCD_ON_DEMAND: false
+        - check SKIP_SCD: false
         - validate [Config\Validator\Build\ConfigFileStructure::validate](https://github.com/magento/ece-tools/blob/develop/src/Config/Validator/Build/ConfigFileStructure.php#L63)
             - in the `app/etc/config.php` 
                 - scopes/websites (count($websites) > 0)
                 - scopes/stores (count($stores) > 0 )
-    - if all checks valid execure [Process\Build\DeployStaticContent\Generate](https://github.com/magento/ece-tools/tree/develop/src/Process/Build/DeployStaticContent/Generate.php)
-        - TODO:
-
+    - if all checks valid, execute [Process\Build\DeployStaticContent\Generate](https://github.com/magento/ece-tools/tree/develop/src/Process/Build/DeployStaticContent/Generate.php)
+        - build SCD commands [StaticContent\CommandFactory::matrix](https://github.com/magento/ece-tools/blob/develop/src/StaticContent/CommandFactory.php#L98)
+            - [StaticContent\CommandFactory::build](https://github.com/magento/ece-tools/blob/develop/src/StaticContent/CommandFactory.php#L131)
+                - command: `php ./bin/magento setup:static-content:deploy --ansi --no-interaction`
+                - add ` -f` option (for magento > 2.2)
+                - add ` -s {$stratagy}` from `SCD_STRATEGY` from `.magento.env.yaml` (for magento > 2.2)
+                - add verbosity level (-v, -vv, -vvv) from `VERBOSE_COMMANDS` from `.magento.env.yaml`
+                - add ` --jobs {$threadCount}` threads count: `SCD_THREADS` from `.magento.env.yaml`
+                - add ` --no-html-minify` by `SKIP_HTML_MINIFICATION` (default: true) from `.magento.env.yaml`
+                - result example: `php ./bin/magento setup:static-content:deploy --ansi --no-interaction -f --jobs 3 --no-html-minify`
+            - default command (`StaticContent\CommandFactory::create($option, array_keys($matrix))`) based on given options
+                - run: StaticContent\CommandFactory::build
+                - get excluded themes: `SCD_EXCLUDE_THEMES` from `.magento.env.yaml` (deprecated)
+                - exclude themes from `SCD_MATRIX`
+                - add unique locales [StaticContent\Build\Option::getLocales](https://github.com/magento/ece-tools/blob/develop/src/StaticContent/Build/Option.php#L124)
+                    - `ADMIN_LOCALE` from (MAGENTO_CLOUD_VARIABLES) (default: en_US)
+                    - `general/locale/code` from `app/etc/config.php` 
+                    - `admin_user/locale/code` from `app/etc/config.php` 
+                    - add `en_US`
+                - result example: `php ./bin/magento setup:static-content:deploy --ansi --no-interaction -f --jobs 3 --no-html-minify --exclude-theme Magento/blank --exclude-theme Magento/luma en_US nb_NO`
+            - generate commands based on `SCD_MATRIX` from `.magento.env.yaml`
+                - run: StaticContent\CommandFactory::build
+                - add ` --theme {$resolvedTheme}`
+                - add `language` from `SCD_MATRIX` (en_US, nb_NO)
+                - result example: `php ./bin/magento setup:static-content:deploy --ansi --no-interaction -f --jobs 3 --no-html-minify --theme Magento/blank en_US nb_NO`
+            - execute all commands 
+> notice: Generate command completed. 
 
 `php ./vendor/bin/ece-tools build:transfer`
+
 
 - [Process\Build\ClearInitDirectory](https://github.com/magento/ece-tools/tree/develop/src/Process/Build/ClearInitDirectory.php)
 - [Process\Build\BackupData](https://github.com/magento/ece-tools/tree/develop/src/Process/Build/BackupData.php)
