Deployment Process /  build transfer

--- a/5. Deployment Process.md
+++ b/5. Deployment Process.md
@@ -91,7 +91,7 @@ Ece-tools [\Magento\MagentoCloud\App\Container](https://github.com/magento/ece-t
 > notice: Starting generate command. (magento/ece-tools version: 2002.0.17, magento/magento2-base version: 2.2.8)
 
 - [Process\Build\PreBuild](https://github.com/magento/ece-tools/tree/develop/src/Process/Build/PreBuild.php)
-    - check VERBOSE_COMMANDS in `.magento.env.yaml`
+    - check `VERBOSE_COMMANDS` in `.magento.env.yaml`
     - clean `generated/code` folder
     - clean `generated/metadata` folder
     - delete flag `.static_content_deploy` file
@@ -169,14 +169,38 @@ Ece-tools [\Magento\MagentoCloud\App\Container](https://github.com/magento/ece-t
                 - add ` --theme {$resolvedTheme}`
                 - add `language` from `SCD_MATRIX` (en_US, nb_NO)
                 - result example: `php ./bin/magento setup:static-content:deploy --ansi --no-interaction -f --jobs 3 --no-html-minify --theme Magento/blank en_US nb_NO`
-            - execute all commands 
+            - execute all generated scd commands
+    - save `.static_content_deploy` flag file
+
 > notice: Generate command completed. 
 
 `php ./vendor/bin/ece-tools build:transfer`
 
+> notice: Starting transfer files. 
 
+- [Process\Build\CompressStaticContent](https://github.com/magento/ece-tools/tree/develop/src/Process/Build/CompressStaticContent.php)
+    - check `.static_content_deploy` flag file
+    - [Util\StaticContentCompressor::process](https://github.com/magento/ece-tools/tree/develop/src/Util/StaticContentCompressor.php)
+        - get gzip compression level in `SCD_COMPRESSION_LEVEL` (default: 6 (build stage) or 4 (deploy stage)) from `.magento.env.yaml`
+        - get seconds maximum time for running static compression command in `SCD_COMPRESSION_TIMEOUT` (default: 600) from `.magento.env.yaml`
+        - get `VERBOSE_COMMANDS` from `.magento.env.yaml`
+        - command result: `/usr/bin/timeout -k 30 600 /bin/bash -c 'find '\''/var/magento/pub/static'\'' -type d -name '\''DELETING_*'\'' -prune -o -type f -size +300c '\''('\'' -name '\''*.js'\'' -or -name '\''*.css'\'' -or -name '\''*.svg'\'' -or -name '\''*.html'\'' -or -name '\''*.htm'\'' '\'')'\'' -print0 | xargs -0 -n100 -P16 gzip -q --keep -6'`
 - [Process\Build\ClearInitDirectory](https://github.com/magento/ece-tools/tree/develop/src/Process/Build/ClearInitDirectory.php)
+    - clear temporary directory: `./init/` 
+    - delete `app/etc/env.php` file
 - [Process\Build\BackupData](https://github.com/magento/ece-tools/tree/develop/src/Process/Build/BackupData.php)
+    - [Process\Build\BackupData\StaticContent](https://github.com/magento/ece-tools/tree/develop/src/Process/Build/BackupData/StaticContent.php)
+        - delete `var/.regenerate` flag file
+        - check `.static_content_deploy` flag file
+        - clear `./init/pub/static/` folder
+        - move `pub/static/` to `init/pub/static`
+    - [Process\Build\BackupData\WritableDirectories](https://github.com/magento/ece-tools/tree/develop/src/Process/Build/BackupData/WritableDirectories.php)
+        - copy `app/etc/` to `init/app/etc/`
+        - copy `pub/media/` to `init/pub/media/`
+        - copy `var/view_preprocessed/` to `init/var/view_preprocessed/` if `SKIP_HTML_MINIFICATION` = false (Default: true)
+        - copy `var/log` to `init/var/log` (e.g. cloud.log file)
+    
+> notice: Transfer completed. 
 
 
 **Deploy**
