Deployment Process / deploy

--- a/5. Deployment Process.md
+++ b/5. Deployment Process.md
@@ -204,7 +204,122 @@ Ece-tools [\Magento\MagentoCloud\App\Container](https://github.com/magento/ece-t
 
 
 **Deploy**
-- `php ./vendor/bin/ece-tools deploy`
+
+`php ./vendor/bin/ece-tools deploy`
+
+> notice: Starting deploy. (magento/ece-tools version: 2002.0.17, magento/magento2-base version: 2.2.8)
+
+- delete `var/.deploy_is_failed` flag file
+- [Process\Deploy\PreDeploy](https://github.com/magento/ece-tools/blob/develop/src/Process/Deploy/PreDeploy.php)
+    - Runs all processes that have to be run before deploy starting. see [Process\Deploy\PreDeploy](https://github.com/magento/ece-tools/tree/develop/src/Process/Deploy/PreDeploy) folders
+        - Process\PreDeploy\ConfigUpdate\Cache
+            - `CACHE_CONFIGURATION` from `.magento.env.yaml`
+        - Process\Deploy\PreDeploy\CleanStaticContent
+            - check `.static_content_deploy` flag file exists
+            - `CLEAN_STATIC_FILES` is true
+            - clean `pub/static/` folder
+        - Process\Deploy\PreDeploy\CleanViewPreprocessed
+            - clean `var/view_preprocessed` directory when the deployment variable `SKIP_HTML_MINIFICATION` is true
+        - Process\Deploy\PreDeploy\CleanRedisCache
+            - `redis-cli -h $redisHost -p $redisPort -n $redisCacheDb flushdb` ($redisCacheDb = 1)
+        - Process\Deploy\PreDeploy\CleanFileCache
+            - delete `/var/cache` folder
+        - Process\Deploy\PreDeploy\RestoreWritableDirectories
+            - see [Filesystem\RecoverableDirectoryList::getList](https://github.com/magento/ece-tools/blob/develop/src/Filesystem/RecoverableDirectoryList.php#L83)
+            - copy `init/app/etc` to `app/etc`
+            - copy `init/pub/media` to `pub/media`
+            - copy (symlink) `init/pub/static` to `pub/static`
+            - delete `var/.regenerate` flag file
+        - Process\Deploy\PreDeploy\SetProductionMode
+            - switching magento to production mode (`app/etc/env.php` => `'MAGE_MODE' => 'production',`)
+    - Enabling Maintenance mode: `php ./bin/magento maintenance:enable --ansi --no-interaction`
+- [Process\Deploy\DisableCron](https://github.com/magento/ece-tools/blob/develop/src/Process/Deploy/DisableCron.php)
+    - disable cron (`app/etc/env.php` => `['cron' => ['enabled' => 0]]`)
+- [Process\ValidateConfiguration](https://github.com/magento/ece-tools/tree/develop/src/Process/ValidateConfiguration.php)
+    ```php
+        $this->container->make(\Magento\MagentoCloud\Process\ValidateConfiguration::class, [
+        'validators' => [
+            ValidatorInterface::LEVEL_CRITICAL => [
+                $this->container->make(ConfigValidator\Deploy\DatabaseConfiguration::class),
+                $this->container->make(ConfigValidator\Deploy\ResourceConfiguration::class),
+                $this->container->make(ConfigValidator\Deploy\SessionConfiguration::class),
+            ],
+            ValidatorInterface::LEVEL_WARNING => [
+                $this->container->make(ConfigValidator\Deploy\AdminData::class),
+                $this->container->make(ConfigValidator\Deploy\PhpVersion::class),
+                $this->container->make(ConfigValidator\Deploy\SearchEngine::class),
+                $this->container->make(ConfigValidator\Deploy\ElasticSearchUsage::class),
+                $this->container->make(ConfigValidator\Deploy\ElasticSearchVersion::class),
+                $this->container->make(ConfigValidator\Deploy\AppropriateVersion::class),
+                $this->container->make(ConfigValidator\Deploy\ScdOptionsIgnorance::class),
+                $this->container->make(ConfigValidator\Deploy\DeprecatedVariables::class),
+                $this->container->make(ConfigValidator\Deploy\RawEnvVariable::class),
+                $this->container->make(ConfigValidator\Deploy\MagentoCloudVariables::class),
+                $this->container->make(ConfigValidator\Deploy\JsonFormatVariable::class),
+            ],
+        ],
+    ]),
+    ```
+    validators list: [Config/Validator/Deploy/](https://github.com/magento/ece-tools/tree/develop/src/Config/Validator/Deploy) 
+- [Process\Deploy\UnlockCronJobs](https://github.com/magento/ece-tools/tree/develop/src/Process/Deploy/UnlockCronJobs.php)
+     - In magento version 2.2 was implemented locking functionality for cron jobs, new cron jobs can't be started if exist job in status 'running' with same 'job_code'.
+     - ```UPDATE `cron_schedule` SET `status` = 'error', `messages` = 'The job is terminated due to system upgrade' WHERE `status` = 'running'```
+- [Process\Deploy\SetCryptKey](https://github.com/magento/ece-tools/tree/develop/src/Process/Deploy/SetCryptKey.php)
+    - update crypt/key in `app/etc/env.php` with `CRYPT_KEY` variable value (MAGENTO_CLOUD_VARIABLES)
+- [Process\Deploy\InstallUpdate](https://github.com/magento/ece-tools/tree/develop/src/Process/Deploy/InstallUpdate.php)
+    - magento not installed
+        - see [Process/Deploy/InstallUpdate/Install](https://github.com/magento/ece-tools/tree/develop/src/Process/Deploy/InstallUpdate/Install)
+        - Process\Deploy\InstallUpdate\Install\Setup: `php ./bin/magento setup:install -n --session-save=db --cleanup-database`
+        - run `php ./bin/magento app:config:import --ansi --no-interaction`
+        - sends email with link to reset password
+    - magento already installed
+        - see [Process/Deploy/InstallUpdate/Update](https://github.com/magento/ece-tools/tree/develop/src/Process/Deploy/InstallUpdate/Update)
+        - sets an admin URL from `ADMIN_URL` variable value (MAGENTO_CLOUD_VARIABLES) (Process\Deploy\InstallUpdate\Update\SetAdminUrl)
+        - Running setup upgrade:`php ./bin/magento setup:upgrade --keep-generated --ansi --no-interaction` (Process\Deploy\InstallUpdate\Update\Setup)
+    - Updating configuration from environment variables (DeployProcess\InstallUpdate\ConfigUpdate)
+        - see [Process/Deploy/InstallUpdate/ConfigUpdate](https://github.com/magento/ece-tools/tree/develop/src/Process/Deploy/InstallUpdate/ConfigUpdate)
+        ```php
+            $this->container->make(DeployProcess\InstallUpdate\ConfigUpdate\PrepareConfig::class),
+            $this->container->make(DeployProcess\InstallUpdate\ConfigUpdate\CronConsumersRunner::class),
+            $this->container->make(DeployProcess\InstallUpdate\ConfigUpdate\DbConnection::class),
+            $this->container->make(DeployProcess\InstallUpdate\ConfigUpdate\Amqp::class),
+            $this->container->make(DeployProcess\InstallUpdate\ConfigUpdate\Session::class),
+            $this->container->make(DeployProcess\InstallUpdate\ConfigUpdate\SearchEngine::class),
+            $this->container->make(DeployProcess\InstallUpdate\ConfigUpdate\Urls::class),
+            $this->container->make(DeployProcess\InstallUpdate\ConfigUpdate\DocumentRoot::class),
+      
+          $this->container->when(DeployProcess\InstallUpdate\ConfigUpdate\Urls::class)
+          ->needs(ProcessInterface::class)
+          ->give(function () {
+              return $this->container->makeWith(ProcessComposite::class, [
+                  'processes' => [
+                      $this->container->make(DeployProcess\InstallUpdate\ConfigUpdate\Urls\Database::class),
+                      $this->container->make(DeployProcess\InstallUpdate\ConfigUpdate\Urls\Environment::class),
+                  ],
+              ]);
+          });
+        ```
+- [Process\Deploy\DeployStaticContent](https://github.com/magento/ece-tools/tree/develop/src/Process/Deploy/DeployStaticContent.php)
+    - clean `pub/static`  and `var/view_preprocessed` if `SCD_ON_DEMAND` = true
+    - skip this step if `SKIP_SCD` = true or `.static_content_deploy` file flag exists
+    - clean `pub/static`  and `var/view_preprocessed` if `CLEAN_STATIC_FILES` = true
+    - Generating fresh static content
+        - see [Process\Deploy\DeployStaticContent\Generate](https://github.com/magento/ece-tools/tree/develop/src/Process/Deploy/DeployStaticContent/Generate.php)
+        - see build SCD commands [StaticContent\CommandFactory::matrix](https://github.com/magento/ece-tools/blob/develop/src/StaticContent/CommandFactory.php#L98)
+- [Process\Deploy\CompressStaticContent](https://github.com/magento/ece-tools/tree/develop/src/Process/Deploy/CompressStaticContent.php)
+    - skip if `SCD_ON_DEMAND` = true
+    - skip if exists `.static_content_deploy` flag
+    - use [Util\StaticContentCompressor::process](https://github.com/magento/ece-tools/tree/develop/src/Util/StaticContentCompressor.php)
+- [Process\Deploy\DisableGoogleAnalytics](https://github.com/magento/ece-tools/tree/develop/src/Process/Deploy/DisableGoogleAnalytics.php)
+    - if `ENABLE_GOOGLE_ANALYTICS` = false (default: false) in the `.magento.env.yaml`
+    - if not master branch (`/^(master|production|staging)(?:-[a-z0-9]+)?$/i`) (check `MAGENTO_CLOUD_ENVIRONMENT` env variable)
+    - execute ```UPDATE `core_config_data` SET `value` = 0 WHERE `path` = 'google/analytics/active'```
+- [Process\Deploy\DeployCompletion](https://github.com/magento/ece-tools/tree/develop/src/Process/Deploy/DeployCompletion.php)
+    - checks is `post_deploy` hook enabled in `.magento.app.yaml`
+    - runs processes if only post_deploy hook is not configured
+- Disable maintenance mode: `php ./bin/magento maintenance:disable --ansi --no-interaction`
+
+> notice: Deployment completed..
 
 **Post_deploy**
 - `php ./vendor/bin/ece-tools post-deploy`
