Deployment Process / post-deploy

--- a/5. Deployment Process.md
+++ b/5. Deployment Process.md
@@ -317,12 +317,46 @@ Ece-tools [\Magento\MagentoCloud\App\Container](https://github.com/magento/ece-t
 - [Process\Deploy\DeployCompletion](https://github.com/magento/ece-tools/tree/develop/src/Process/Deploy/DeployCompletion.php)
     - checks is `post_deploy` hook enabled in `.magento.app.yaml`
     - runs processes if only post_deploy hook is not configured
+    ```php
+    $this->container->when(DeployProcess\DeployCompletion::class)
+        ->needs(ProcessInterface::class)
+        ->give(function () {
+            return $this->container->makeWith(ProcessComposite::class, [
+                'processes' => [
+                    $this->container->make(PostDeployProcess\EnableCron::class),
+                    $this->container->make(PostDeployProcess\Backup::class),
+                    $this->container->make(PostDeployProcess\CleanCache::class),
+                ],
+            ]);
+        });
+    ```
 - Disable maintenance mode: `php ./bin/magento maintenance:disable --ansi --no-interaction`
 
-> notice: Deployment completed..
+> notice: Deployment completed.
 
 **Post_deploy**
-- `php ./vendor/bin/ece-tools post-deploy`
+
+`php ./vendor/bin/ece-tools post-deploy`
+
+> notice: Starting post-deploy.
+
+- check `var/.deploy_is_failed` flag file and skip post-deploy
+- [Config\Validator\Deploy\DebugLogging](https://github.com/magento/ece-tools/blob/develop/src/Config/Validator/Deploy/DebugLogging.php)
+    - check `dev/debug/debug_logging` is disabled in production environments
+- [Process\PostDeploy\EnableCron](https://github.com/magento/ece-tools/blob/develop/src/Process/PostDeploy/EnableCron.php)
+    - enable cron (`app/etc/env.php` => `unset($config['cron']['enabled']);`)
+- [Process\PostDeploy\Backup](https://github.com/magento/ece-tools/blob/develop/src/Process/PostDeploy/Backup.php)
+    - \Magento\MagentoCloud\Filesystem\BackupList::getList
+    - copy `app/etc/env.php` to `app/etc/env.php.bak`
+    - copy `app/etc/config.php` to `app/etc/env.php.bak`
+- [Process\PostDeploy\CleanCache](https://github.com/magento/ece-tools/blob/develop/src/Process/PostDeploy/CleanCache.php)
+    - execute: `php ./bin/magento cache:flush --ansi --no-interaction`
+- [Process\PostDeploy\WarmUp](https://github.com/magento/ece-tools/blob/develop/src/Process/PostDeploy/WarmUp.php)
+    - Process\PostDeploy\WarmUp::getUrlsForWarmUp
+    - call async urls from `WARM_UP_PAGES` in the `.magento.env.yaml`
+    - use `web/unsecure/base_url` and `web/secure/base_url` from `core_config_data` table
+
+> notice: Post-deploy is complete.
 
 ###### How to extend these scripts and best practices for doing so
 
