Deployment Process / logs

--- a/5. Deployment Process.md
+++ b/5. Deployment Process.md
@@ -362,8 +362,43 @@ Ece-tools [\Magento\MagentoCloud\App\Container](https://github.com/magento/ece-t
 
 ###### Describe the ways to retrieve logs for phases and its scripts
 
+**Build logs**
+
+Logs from the build hook are redirected to the output stream of git push.
+
+`var/log/cloud.log` file inside the Magento application root directory, compiles build, deploy, post-deploy actions into one file.
+
+**Deploy logs**
+
+`var/log/cloud.log` file inside the Magento application root directory, compiles build, deploy, post-deploy actions into one file.
+
+Logs from the deploy hook are located on the server in the following locations:
+ - Integration: /var/log/deploy.log
+ - Staging: /var/log/platform/<project ID>_stg/deploy.log
+ - Production: /var/log/platform/<project ID>/deploy.log
+
+**Post Deploy logs**
+
+`var/log/cloud.log` file inside the Magento application root directory, compiles build, deploy, post-deploy actions into one file.
+
+Logs from the post-deploy hook are located on the server in the following locations:
+ - Integration: /var/log/post-deploy.log
+ - Staging: /var/log/platform/<project ID>_stg/post_deploy.log
+ - Production: /var/log/platform/<project ID>/post_deploy.log
+
+
+> Note1:
+> `var/log/cloud.log` logs on the Staging and Production environments are only available on the first node in the cluster.
+
+> Note2:
+> Logs in the /var/log/ directory are not shared between nodes of the enterprise server cluster; 
+> each server has its own log. We recommend checking logs on every node for complete reporting.
+
+
 #### 5.2 Demonstrate the ability to create Magento Cloud script configurations
 
 Documentation:
 - [Deployment process](https://devdocs.magento.com/guides/v2.3/cloud/reference/discover-deploy.html#cloud-deploy-over-phases)
 - [Build and deploy / platform.sh](https://docs.platform.sh/configuration/app/build.html#build-hook)
+- [View logs for troubleshooting](https://devdocs.magento.com/guides/v2.3/cloud/trouble/environments-logs.html)
+- [Log locations (directories) for Pro plan: Integration, Staging, Production](https://support.magento.com/hc/en-us/articles/360000318834-Log-locations-directories-for-Pro-plan-Integration-Staging-Production)
