Static Content Deployment

--- a/5. Deployment Process.md
+++ b/5. Deployment Process.md
@@ -58,6 +58,12 @@ Build and deploy full steps:
         php ./vendor/bin/ece-tools deploy
     ```
     - deploy script uses the values defined by configuration files in the `.magento` directory, then the script deletes the directory and its contents
+    
+    Note:
+    > During the deployment process, all connections queue for up to 5 minutes preserving any active sessions and pending actions, 
+    > such as adding to cart or checkout. 
+    > After deployment, the queue is released and connections continue without interruption. 
+    > To use this connection hold to your advantage and reduce downtime to zero, you must configure your project to use the most efficient deploy strategy.
 6. Post-deployment: configure routing
     - creates backup (BAK) files for the app/etc/env.php and the app/etc/config.php configuration files
     - execute commands after deploying your application and after the container begins accepting connections
